--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -33,6 +33,7 @@ sea-orm-migration = { features = [
     "runtime-tokio-rustls",
     "sqlx-postgres",
 ], version = "1.1.10" }
+sea-query = "0.32.6"
 serde = { version = "1", features = [
     "derive",
 ] }
@@ -129,6 +130,7 @@ rand = "0.9.0"
 regex = "1.11"
 sea-orm.workspace = true
 sea-orm-migration.workspace = true
+sea-query.workspace = true
 serde.workspace = true
 serde_json = "1.0"
 serde_repr = "0.1"
