--- a/web/.oxlintrc.json
+++ b/web/.oxlintrc.json
@@ -14,7 +14,12 @@
 		"nursery": "warn"
 	},
 	"rules": {
+		// False Positives
+		"array-callback-return": ["off", { "allowImplicitReturn": true }],
+		"curly": "off",
+		"max-params": "off",
 		"eqeqeq": "off",
+		"no-plusplus": "off",
 		"no-async-await": "off",
 		"no-duplicate-imports": "off",
 		"no-ternary": "off",
@@ -34,6 +39,14 @@
 				"allow": ["constructor", "privateConstructors", "protectedConstructors"]
 			}
 		],
+		"max-lines": [
+			"warn",
+			{
+				"max": 300,
+				"skipBlankLines": true,
+				"skipComments": true
+			}
+		],
 		"sort-keys": "off",
 
 		"default-case": [
@@ -46,6 +59,7 @@
 		"oxc/no-const-enum": "off",
 		"oxc/no-optional-chaining": "off",
 		"oxc/no-barrel-file": "off",
+		"oxc/no-rest-spread-properties": "off",
 
 		"eslint/func-style": "off",
 		"eslint/max-depth": ["warn", 4],
