Implement release image (#131)
- Add dprint to format sql
- Add `release_image` and `release_image_queue` table
- Add `cover_art_url` to domain model `Release`

--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "rust-analyzer.cargo.extraArgs": ["--profile", "ra"],
-  "rust-analyzer.cargo.targetDir": true
+  "rust-analyzer.cargo.targetDir": true,
+  "rust-analyzer.imports.prefix": "self",
+  "[sql]": {
+    "editor.defaultFormatter": "dprint.dprint"
+  }
 }
