--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -104,7 +104,9 @@ error_set = { version = "0.8", features = [
     "tracing",
 ] }
 fred = { version = "10.0" }
-frunk = { version = "0.4.3", features = [ "std" ] }
+frunk = { version = "0.4.3", features = [
+    "std",
+] }
 futures-util = "0.3"
 governor = "0.8.0"
 image = "0.25"
