Use pg_trgm in keyword search  (#148)

--- a/server/.dprint.jsonc
+++ b/server/.dprint.jsonc
@@ -3,10 +3,13 @@
   "includes": ["crates/migration/src/**/*.sql"],
   "sql": {
     "linesBetweenQueries": 2,
-    "uppercase": true
+    "uppercase": true,
+    // https://github.com/shssoichiro/sqlformat-rs/issues/84
+    // "maxInlineArguments": 3,
+    "maxInlineTopLevel": 3
   },
   "plugins": [
     // "https://plugins.dprint.dev/sql-0.2.0.wasm"
-    "https://github.com/Huliiiiii/dprint-plugin-sql/releases/download/20250606/dprint_plugin_sql.wasm"
+    "https://github.com/Huliiiiii/dprint-plugin-sql/releases/download/20250721/plugin.wasm"
   ]
 }
