--- a/server/.vscode/extensions.json
+++ b/server/.vscode/extensions.json
@@ -1,8 +1,7 @@
 {
-	"recommendations": [
-		"skellock.just",
-		"tamasfe.even-better-toml",
-		"rust-lang.rust-analyzer",
-		"inferrinizzard.prettier-sql-vscode"
-	]
+  "recommendations": [
+    "skellock.just",
+    "tamasfe.even-better-toml",
+    "rust-lang.rust-analyzer"
+  ]
 }
