--- a/web/renovate.json
+++ b/web/renovate.json
@@ -1,6 +1,6 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["config:recommended", ":semanticCommitsDisabled"],
+	"extends": ["config:recommended", ":semanticCommitsDisabled", group:allNonMajor],
 	"prConcurrentLimit": 0,
 	"minimumReleaseAge": "3 days",
 	"baseBranches": ["main"]
