--- a/web/renovate.json
+++ b/web/renovate.json
@@ -2,10 +2,22 @@
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
 	"extends": [
 		"config:recommended",
-		":semanticCommitsDisabled", 
+		":semanticCommitsDisabled",
 		"group:allNonMajor"
 	],
 	"prConcurrentLimit": 0,
 	"minimumReleaseAge": "3 days",
-	"baseBranches": ["main"]
+	"baseBranches": ["main"],
+	"packageRules": [
+		{
+			"matchManagers": ["npm"],
+			"matchPackagePatterns": ["^@tanstack"],
+			"groupName": "tanstack"
+		},
+		{
+			"matchManagers": ["npm"],
+			"matchPackagePatterns": ["^storybook-solidjs"],
+			"groupName": "tanstacstorybook-solidjsk"
+		}
+	]
 }
