--- a/web/package.json
+++ b/web/package.json
@@ -69,6 +69,7 @@
 		"@types/eslint-config-prettier": "^6.11.3",
 		"@vitest/browser": "^3.1.2",
 		"babel-preset-solid": "^1.9.5",
+		"eslint": "^9.21.0",
 		"eslint-config-prettier": "^10.1.2",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-oxlint": "^1.0.0",
