--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -29,6 +29,10 @@ axum = { version = "0.8", features = [
 axum-login = { version = "0.18" }
 chrono = "0.4"
 dotenvy = "0.15"
+enumset = { version = "1.1.7", features = [
+    "alloc",
+    "serde",
+] }
 itertools = "0.14"
 quote = "1.0.38"
 rand = "0.9.0"
@@ -110,6 +114,7 @@ derive_more = { version = "2.0.1", features = [
     "into",
 ] }
 dotenvy.workspace = true
+enumset.workspace = true
 fred = { version = "10.0" }
 frunk = { version = "0.4.3", features = [
     "std",
