--- a/web/renovate.json
+++ b/web/renovate.json
@@ -2,7 +2,8 @@
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
 	"extends": [
 		"config:recommended",
-		":semanticCommitsDisabled"
+		":semanticCommitsDisabled",
+		"schedule:weekly"
 	],
 	"prConcurrentLimit": 0,
 	"minimumReleaseAge": "3 days",
