Fix artist query params

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -93,6 +93,7 @@ argon2.features = [
 argon2.workspace = true
 async-trait = { version = "0.1" }
 axum.workspace = true
+axum-extra = { version = "0.10.1", features = [ "query" ] }
 axum-login.workspace = true
 axum_typed_multipart = "0.16"
 base64 = "0.22"
