--- a/web/package.json
+++ b/web/package.json
@@ -22,13 +22,19 @@
 		"@solid-primitives/i18n": "^2.2.1",
 		"@solidjs/meta": "^0.29.4",
 		"@solidjs/router": "^0.15.3",
+		"@storybook/addon-a11y": "^9.1.3",
+		"@storybook/addon-docs": "^9.1.3",
+		"@storybook/addon-links": "^9.1.3",
+		"@storybook/addon-onboarding": "^9.1.3",
+		"@storybook/addon-vitest": "^9.1.3",
 		"@tanstack/solid-query": "^5.85.5",
 		"@tanstack/solid-query-devtools": "^5.85.5",
 		"@tanstack/solid-router": "^1.131.27",
 		"@thc/api": "workspace:*",
-		"@thc/query": "workspace:*",
 		"@thc/icons": "workspace:*",
+		"@thc/query": "workspace:*",
 		"@thc/toolkit": "workspace:*",
+		"@vitest/coverage-v8": "^3.2.4",
 		"arktype": "^2.1.20",
 		"cropperjs": "^2.0.1",
 		"dayjs": "^1.11.13",
