Add release disc (#177)

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -93,7 +93,9 @@ argon2.features = [
 argon2.workspace = true
 async-trait = { version = "0.1" }
 axum.workspace = true
-axum-extra = { version = "0.10.1", features = [ "query" ] }
+axum-extra = { version = "0.10.1", features = [
+    "query",
+] }
 axum-login.workspace = true
 axum_typed_multipart = "0.16"
 base64 = "0.22"
@@ -121,6 +123,9 @@ frunk = { version = "0.4.3", features = [
     "std",
 ] }
 futures-util = "0.3"
+garde = { version = "0.22.0", features = [
+    "full",
+] }
 governor = "0.8.0"
 image = "0.25"
 iso8601-duration = { version = "0.2", features = [
@@ -182,6 +187,7 @@ utoipa-axum = "0.2"
 utoipa-scalar = { version = "0.3", features = [
     "axum",
 ] }
+vecmap-rs = "0.2.3"
 xxhash-rust = { version = "0.8", features = [
     "std",
     "xxh3",
