--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -160,10 +160,10 @@ serde_with = { version = "3.12.0", features = [
     "chrono_0_4",
 ] }
 smart-default = "0.7.1"
+snafu = "0.8"
 strum = { version = "0.27", features = [
     "derive",
 ] }
-thiserror = "2.0.12"
 tikv-jemallocator = { version = "0.6.0", optional = true }
 tokio.workspace = true
 tower = { version = "0.5.2", features = [
