--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -94,6 +94,7 @@ async-trait = { version = "0.1" }
 axum.workspace = true
 axum-extra = { version = "0.12.0", features = [
     "query",
+    "typed-header",
 ] }
 axum-login.workspace = true
 axum_typed_multipart = "0.16"
@@ -109,6 +110,7 @@ chrono.workspace = true
 config = { version = "0.15.8", features = [
     "ron",
     "toml",
+    "convert-case",
 ], default-features = false }
 derive_more = { version = "2.0.1", features = [
     "display",
@@ -129,6 +131,7 @@ garde = { version = "0.22.0", features = [
     "full",
 ] }
 governor = "0.8.0"
+headers = "0.4"
 image = "0.25"
 iso8601-duration = { version = "0.2", features = [
     "chrono",
@@ -144,12 +147,16 @@ lettre = { version = "0.11.14", default-features = false, features = [
 maud = { version = "0.27.0", features = [
     "axum",
 ] }
+moka = { version = "0.12", features = [
+    "future",
+] }
 nestify = "0.3.3"
 pulldown-cmark = { version = "0.13.0", default-features = false, features = [
     "html",
     "simd",
 ] }
 rand.workspace = true
+rapidhash = "4"
 regex = "1.11"
 sea-orm.workspace = true
 sea-orm-migration.workspace = true
