--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,6 @@
 		"@storybook/addon-onboarding": "^9.1.3",
 		"@storybook/addon-vitest": "^9.1.3",
 		"@tanstack/solid-query": "^5.90.3",
-		"@tanstack/solid-query-devtools": "^5.90.3",
 		"@tanstack/solid-router": "^1.132.25",
 		"@thc/api": "workspace:*",
 		"@thc/icons": "workspace:*",
@@ -72,8 +71,11 @@
 		"@storybook/test": "^8.6.14",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/vite": "^4.1.12",
+		"@tanstack/devtools-vite": "^0.3.11",
 		"@tanstack/eslint-plugin-query": "^5.91.0",
 		"@tanstack/router-plugin": "^1.132.25",
+		"@tanstack/solid-devtools": "^0.7.14",
+		"@tanstack/solid-query-devtools": "^5.91.0",
 		"@tanstack/solid-router-devtools": "^1.132.25",
 		"@testing-library/jest-dom": "^6.7.0",
 		"@testing-library/user-event": "^14.6.1",
