--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       test: ["CMD-SHELL", "pg_isready -U appuser -d appdb"]
     volumes:
       - pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     networks:
       - backend
 
