--- a/web/.oxlintrc.json
+++ b/web/.oxlintrc.json
@@ -6,6 +6,7 @@
 	"ignorePatterns": [
 		"src/locale/**",
 		"**.gen.ts",
+		"packages/api/**/gen.ts",
 		"src/style/color/convert.ts"
 	],
 	"categories": {
