--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
 		"@storybook/addon-vitest": "^9.1.3",
 		"@tanstack/solid-query": "^5.90.3",
 		"@tanstack/solid-router": "^1.132.25",
+		"@tanstack/solid-table": "^8.21.3",
 		"@thc/api": "workspace:*",
 		"@thc/icons": "workspace:*",
 		"@thc/query": "workspace:*",
