--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,11 +5,13 @@ on:
     branches:
       - main
     paths:
-      - "crates/**"
-      - "src/**"
-      - "Cargo.toml"
-      - "Cargo.lock"
-      - "build.rs"
+      - "server/crates/**"
+      - "server/src/**"
+      - "server/.cargo/**"
+      - "server/Cargo.toml"
+      - "server/Cargo.lock"
+      - "server/build.rs"
+      - "server/rust-toolchain.toml"
   workflow_dispatch:
 
 env:
@@ -23,6 +25,9 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: server
 
     concurrency:
       group: "deploy-dev-server"
@@ -42,7 +47,7 @@ jobs:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-${{ hashFiles('server/Cargo.lock') }}
 
       - name: Install mold
         run: |
