chore: Bump prettier

--- a/web/.prettierrc.toml
+++ b/web/.prettierrc.toml
@@ -11,7 +11,7 @@ importOrderSeparation = true
 tailwindStylesheet = "./src/index.css"
 plugins = [
 	"@trivago/prettier-plugin-sort-imports",
-	"prettier-plugin-tailwindcss",
+	# "prettier-plugin-tailwindcss",
 ]
 # experimentalTernaries = true
 experimentalOperatorPosition = "start"
